--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <header>
         <inner-column>
             <nav>
-                <h1 class="hl">Header logo</h1>
+                <h1 class="hl">Your webpage</h1>
                     <ul>
-                        <li><a href="">link 1</a></li>
-                        <li><a href="">link 2</a></li>
-                        <li><a href="">link 3</a></li>
+                        <li><a href="https://www.theodinproject.com/paths/foundations/courses/foundations">Odin Project</a></li>
+                        <li><a href="https://www.theodinproject.com/lessons/foundations-landing-page">Project</a></li>
+                        <li><a href="https://github.com/tagno1989/Landing_Page">Git Hub repo</a></li>
                     </ul>
             </nav>
         </inner-column>
@@ -35,9 +35,10 @@
                         <img src="pexels-shonejai-1227511.jpg" alt="wall">
                     </picture>
                     <text-content>
-                        <h1 class="loud-voice">This site is awesome</h1>
-                        <p class="calm-voice">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Deserunt quo quia, deleniti quas consequatur accusantium delectus quisquam. Quas totam consectetur unde.</p>
-                        <button class="s1btn">sign up</button>
+                        <h1 class="loud-voice">This webpage is awesome</h1>
+                        <p class="calm-voice">This page is a mockup of a webpage made using only html and css. <br> The project can be found within the odin project's foundations course. <br> The project was what you see, an entire web page from a design provided by the course.  All images are brick walls found free on the web.</p>
+                        <!-- comment out button, not sure what to do with it maybe add js or something later-->
+                        <!-- <button class="s1btn">sign up</button> -->
                     </text-content>
                 </graphic-diptych>
             </inner-column>
@@ -106,7 +107,7 @@
                         <h3 class="quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                             Eligendi hic quibusdam est qui? Aliquid in rerum aliquam asperiores eligendi facilis!
                         </h3>
-                        <h5 class="quote-by"> - some greek guy</h5>
+                        <h5 class="quote-by"> - some greek guy's quote</h5>
                     </text-content>
                 </quote-space>
             </inner-column>
@@ -132,7 +133,7 @@
 
     <footer>
         <inner-column>
-            <h1>copyright @ The Odin Project 2022</h1>
+            <h1>copyright @ The Odin Project 2022 / Jacob Warren</h1>
         </inner-column>
     </footer>
 </body>
